--- a/build_output/styles/style.css
+++ b/build_output/styles/style.css
@@ -169,6 +169,11 @@ blockquote p {
 	margin: 0 0 0 1em;
 	padding: 0;
 }
+.photocredit {
+	text-align: right;
+	font-size: 0.8em;
+	font-style: italic;
+}
 
 .sidebar p {
 	font-size: 0.8em;
